--- a/langs/en.json
+++ b/langs/en.json
@@ -314,5 +314,6 @@
   "video_size" : "Video size can't be greater than 25 mb.",
   "delete_video" : "Delete video",
   "are_you_sure_to_delete_video" : "Are you sure you want to delete video?",
-  "video_saved" : "Video saved"
+  "video_saved" : "Video saved",
+   "enter_description_of_group" : "Enter description of group"
 }
