--- a/langs/en.json
+++ b/langs/en.json
@@ -294,6 +294,7 @@
   "add_to_favourite" : "Add to favourite",
   "show_everyone_invited" : "Show everyone invited",
   "publication" : "Publication",
+  "publications" : "Publications",
   "publication_to_list_of_contact" : "Publication to list of contact",
   "create_a_publication" : "Create a publication that will be displayed to all or part of your contacts. Use this for announcements or sharing content. You can also add photo gallery and collect information through forms.",
   "display_until" : "Display until",
